# pycon.tw

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  DEPLOY.md  Dockerfile  LICENSE.txt  Makefile  README.md  community_track.sh  deploy.yml  deploy_key.enc  deploy_staging.sh.enc  dev.Dockerfile  docker-compose-db.yml  docker-compose-dev.yml  docker-compose.yml  enter_dev_env.sh  fabfile.py  package-lock.json  package.json  pyproject.toml  secret_sauce.bash  secrets.tar.enc  setup.cfg  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yaml
contrib/: db-testing-data.json  dev.Dockerfile  dev_env.md  docker-compose-dev.yml  docker-entrypoint.sh
contrib/dev/: Dockerfile
dockerfile/: Dockerfile  README.md
document/: continuous_deployment.md  deploy_docker_dev.md  deploy_docker_prod.md  deploy_local_env_dev.md
requirements/: base.txt  ci.txt  dev.txt  local.txt  production.txt  travis.txt
src/: .coveragerc  .flake8  .gitattributes  conftest.py  manage.py  pytest.ini
src/.tx/: config
src/api/: urls.py  views.py
src/attendee/: README.md  admin.py  apps.py  models.py  resources.py  tests.py
src/attendee/api/: urls.py  views.py
src/attendee/migrations/: 0001_initial.py
src/ccip/: admin.py  models.py  urls.py  views.py
src/ccip/tests/: conftest.py
src/core/: admin.py  authentication.py  choices.py  context_processors.py  data.py  difftools.py  forms.py  middlewares.py  mixins.py  models.py  tests.py  utils.py  validators.py  views.py  widgets.py
src/core/migrations/: 0001_change_default_site.py  (+1 more)
src/django_telegrambot/: apps.py  telegramBotSettings.py  telegrambot.py  urls.py  views.py
src/events/: admin.py  api_proposals.py  forms.py  models.py  renderers.py  resources.py  serializers.py  translation.py  urls.py  views.py
src/ext2020/: README.md  admin.py  apps.py  forms.py  models.py  resources.py  translation.py  urls.py  views.py
src/proposals/: admin.py  decorators.py  forms.py  models.py  resources.py  telegrambot.py  tests.py  urls.py  utils.py  views.py
src/pycontw2016/: context_processors.py  logger.py  pyproject.toml  urls.py  wsgi.py
src/remotedb/: __init__.py  apps.py  dumpers.py  triggers.py
src/reviews/: README.md  admin.py  apps.py  context.py  forms.py  models.py  resources.py  urls.py  views.py
src/schedule/: admin.py  forms.py  models.py
src/security/: urls.py
src/sponsors/: admin.py  models.py  translation.py  urls.py  views.py
src/template_tests/: conftest.py  test_pycontw2016.py
src/templates/: 404.html  base.html  change_lang.html  dashboard_base.html  index.html
src/tests/: test_gcp.py
src/users/: admin.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
(+1209 files in other folders)
